--- a/contacto.html
+++ b/contacto.html
@@ -61,7 +61,7 @@
             <div class="campo">
                 <label class="campo__label" for="mensaje">Mensaje</label>
                 <textarea 
-                    class="campo__field"
+                    class="campo__field campo__field--textarea"
                     id="mensaje"
                 ></textarea>
             </div>
@@ -90,5 +90,7 @@
         </div>
     </footer><!--.footer-->
     
+    <script src="js/modernizr.js"></scripts>
+        
 </body>
 </html>
