--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
+    <meta name="description" content="Página web de cursos y blog relacionados con el café">
 
     <!-- Prefetch: Carga la siguiente página para que la experiencia sea más rápida-->
     <link rel="prefetch" href="nosotros.html" as="document">
